# abb-mvd-code-retreat-25

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
starting_points/cpp/: CMakeLists.txt  CMakePresets.json  README.md
starting_points/cpp/src/: CMakeLists.txt  game_of_life.h  game_of_life_test.cpp
starting_points/python/: README.md  game_of_life_test.py  pyproject.toml
